# printer

./: .gitignore  CMakeLists.txt  README.md  led.cpp  led.h  printer.ino  stepper.cpp  stepper.h
arduino/: printer.ino  upload_prog.sh
boot_files/: Makefile  README.md  boot.S  config.txt  frame_buffer.c  frame_buffer.h  io.c  io.h  kernel.c  kernel8.elf  kernel8.img  mailbox.c
boot_files_/boot_files/: Makefile  io.c  io.h  kernel.c  kernel8.elf  kernel8.img  link.ld  mailbox.c  terminal.h
client/: package-lock.json
client/src/: App.css  App.js  App.test.js  index.css
control/: main.cpp
include/: constants.hpp  controller.hpp  mesh.hpp  path_plan.hpp  printer_types.hpp  state_machine.hpp  stl_helpers.hpp
include/containers/: circular_buffer.hpp  data_packet.hpp  mesh.hpp  printer_types.hpp  state_machine.hpp  worker_thread.hpp
include/workers/: controller.hpp  frontend.hpp  path_plan.hpp
kernel/: Makefile  kernel8.elf  kernel8.img
kernel/boot/: boot.S
kernel/include/: frame_buffer.h  io.h  mailbox.h
kernel/kernel/: kernel.c
kernel/lib/: frame_buffer.c  io.c  mailbox.c
motion/: printer.ino
os_backup/: cmdline.txt  config.txt  issue.txt  kernel8.img
scripts/: build.sh
src/: main.cpp  mesh.cpp  path_plan.cpp  worker_thread.cpp
tests/: test_controller.cpp  test_data_packet.cpp  test_stl.cpp
tests/data/: ascii_example.stl  torus_ascii.stl
visualization/: pathplan_bindings.cpp  server.py  visualize_path.py
